[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game Files/Map Files/ProduceMap.gd" type="Script" id=1]
[ext_resource path="res://Game Files/Grid Files/Grid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game Files/Raycast Files/Raycast.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Game Files/Map Files/Map.gd" type="Script" id=5]
[ext_resource path="res://Game Files/Treasure Files/Treasure.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game Files/Bomb Folder/Bomb.tscn" type="PackedScene" id=7]

[node name="Map" type="Node2D"]
script = ExtResource( 5 )
grid_scene = ExtResource( 2 )
treasure_scene = ExtResource( 6 )
bomb_scene = ExtResource( 7 )

[node name="TreasureNBombContainer" type="Node2D" parent="."]
show_behind_parent = true

[node name="ProduceMap" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Raycast" parent="ProduceMap" instance=ExtResource( 3 )]
position = Vector2( 0, -32 )

[node name="MapIndicator" type="Sprite" parent="ProduceMap"]
modulate = Color( 0.0901961, 0.8, 0.854902, 1 )
texture = ExtResource( 4 )

[node name="WalkTimer" type="Timer" parent="ProduceMap"]
wait_time = 0.1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="ProduceMap"]

[connection signal="produce_grid" from="ProduceMap" to="." method="_on_ProduceMap_produce_grid"]
[connection signal="produce_screen_exited" from="ProduceMap" to="." method="_on_ProduceMap_produce_screen_exited"]
[connection signal="touch" from="ProduceMap/Raycast" to="ProduceMap" method="_on_Raycast_touch"]
[connection signal="timeout" from="ProduceMap/WalkTimer" to="ProduceMap" method="_on_WalkTimer_timeout"]
[connection signal="screen_exited" from="ProduceMap/VisibilityNotifier2D" to="ProduceMap" method="_on_VisibilityNotifier2D_screen_exited"]
